Fixed margin on mobile for feature/detail columns, added save and delete buttons to selected feature. Now only displays delete and share idea buttons on selected Idea

--- a/static/stylesheets/cleverbucket.css
+++ b/static/stylesheets/cleverbucket.css
@@ -2,18 +2,24 @@ body {
 	height: 100%;
 	width: 99.2%;
 	overflow: auto;
-
+	font-varient: small-caps;
 	/*color: #fff056;	
 	background-color: #191919;*/
 }
 
 .delete-icon {
-	color: red;
+	color: #d91111;
 	padding-top: 6px;
 }
 .share-icon {
 	color: green;
 	padding-top: 6px;
+	padding-right: 5px;
+}
+.save-icon {
+	color: #0000B2;
+	padding-top: 6px;
+	padding-right: 5px;
 }
 
 /* Ideas */
@@ -47,11 +53,8 @@ body {
 	margin-bottom: 0px;
 	padding-top: 6px;
 	padding-bottom: 6px;
-	/*background-image: linear-gradient(#d1eff9, #77cfed);
-	border-color: #77cfed #77cfed hsl(195, 77%, 65%);*/
 	background-image: linear-gradient(#b6e5f5, #5cc6e9);
 	border-color: #5cc6e9 #5cc6e9 hsl(195, 77%, 59%);
-	/*background-image: linear-gradient(rgba(0,220,220,0.45), rgba(10,190,190,0.75));*/
 	color: #343D3D;
 
 }
@@ -65,7 +68,6 @@ body {
 .selectedIdea {
 	box-shadow: inset 2px 2px 2px 3px rgba(0,0,0,0.60);
 }
-
 
 .ideaTab:hover {
 	color: white;
@@ -84,9 +86,13 @@ body {
 }
 
 #ideaTitle {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	background-color: hsl(0,0%,16%);
 	background-image: linear-gradient(#5b5b5b, #282828);
-	color: #fff;
+	color: white;
 	text-align: center;
 	height:5%;
 }
@@ -109,6 +115,12 @@ body {
 	padding-bottom: 6px;
 	background-image: linear-gradient(#b6e5f5, #5cc6e9);
 	border-color: #5cc6e9 #5cc6e9 hsl(195, 77%, 59%);
+}
+
+.featureTabItem{
+	font-size: 1.5em;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .selectedFeature {
@@ -135,10 +147,14 @@ body {
 	max-height: 100%;
 }
 #featureTitle{
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	background-color: hsl(0,0%,16%);
 	background-image: linear-gradient(#5b5b5b, #282828);
 	background-repeat: repeat-x;
-	color: #fff;
+	color: white;
 	text-align: center;
 }
 .featureDetail{
@@ -159,18 +175,19 @@ body {
 	border: 1px solid black;
 }
 .btn-custom {
-  background-color: hsl(197, 100%, 26%) !important;
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#65d3ff", endColorstr="#005f84");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#65d3ff), to(#005f84));
-  background-image: -moz-linear-gradient(top, #65d3ff, #005f84);
-  background-image: -ms-linear-gradient(top, #65d3ff, #005f84);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #65d3ff), color-stop(100%, #005f84));
-  background-image: -webkit-linear-gradient(top, #65d3ff, #005f84);
-  background-image: -o-linear-gradient(top, #65d3ff, #005f84);
-  background-image: linear-gradient(#65d3ff, #005f84);
-  border-color: #005f84 #005f84 hsl(197, 100%, 15%);
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.72);
-  -webkit-font-smoothing: antialiased;
+	background-color: hsl(197, 100%, 26%) !important;
+	background-repeat: repeat-x;
+	background-image: linear-gradient(#65d3ff, #005f84);
+	border-color: #005f84 #005f84 hsl(197, 100%, 15%);
+	color: #fff !important;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.72);
+	-webkit-font-smoothing: antialiased;
 }
+.btn-customDelete {
+	background-color: hsl(0, 85%, 26%) !important;
+	background-repeat: repeat-x;
+	background-image: linear-gradient(#d91111, #7a0909);
+	border-color: #7a0909 #7a0909 hsl(0, 85%, 21%);
+	color: #fff !important;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+	-webkit-font-smoothing: antialiased;
